--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,7 @@ body {
 /* Блок предложения и скидки */
 .offers {
   padding-top: 98px;
+  padding-bottom: 98px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 21px;
@@ -193,6 +194,14 @@ body {
 .offers__title {
   font-size: 30px;
   color: #f16d7f;
+}
+
+.offers > div:nth-child(4) {
+  grid-row: 2/4;
+}
+
+.offers > div:nth-child(1) {
+  grid-row: 1/3;
 }
 
 /* Блок продукты */
