--- a/css/style.scss
+++ b/css/style.scss
@@ -209,7 +209,8 @@ body {
 /* Блок предложения и скидки */
 .offers {
     padding-top: 98px;
-
+    padding-bottom: 98px;
+    
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 21px;
@@ -238,6 +239,14 @@ body {
         font-size: 30px;
         color: $colorPink;
     }
+}
+
+.offers > div:nth-child(4) {
+    grid-row: 2 / 4;
+}
+
+.offers > div:nth-child(1) {
+    grid-row: 1 / 3;
 }
 
 /* Блок продукты */
