--- a/css/style.css
+++ b/css/style.css
@@ -139,12 +139,10 @@ body {
 
 .hero {
   background-image: url(../img/main-photo.png);
-  background-blend-mode: overlay;
-  background-size: cover;
-  height: 615px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  background-color: #e8e8e8;
+  background-position: center center;
+  background-repeat: no-repeat;
+  min-height: 665px;
 }
 
 .hero-text {
@@ -174,6 +172,12 @@ body {
   grid-template-columns: 1fr 1fr;
   gap: 21px;
 }
+.offers > div:nth-child(4) {
+  grid-row: 2/4;
+}
+.offers > div:nth-child(1) {
+  grid-row: 1/3;
+}
 .offers__item {
   position: relative;
   display: flex;
@@ -191,17 +195,9 @@ body {
   letter-spacing: 0.025em;
   color: #222222;
 }
-.offers__title {
+.offers__text_title {
   font-size: 30px;
   color: #f16d7f;
-}
-
-.offers > div:nth-child(4) {
-  grid-row: 2/4;
-}
-
-.offers > div:nth-child(1) {
-  grid-row: 1/3;
 }
 
 /* Блок продукты */
