--- a/css/style.scss
+++ b/css/style.scss
@@ -175,13 +175,10 @@ body {
 // Блок с центральным фото
 .hero {
     background-image: url(../img/main-photo.png);
-    background-blend-mode: overlay;
-    background-size: cover;
-    height: 615px;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    background-color: $bgColorMain;
+    background-position: center center;
+    background-repeat: no-repeat;
+    min-height: 665px;
 }
 
 .hero-text {
@@ -210,11 +207,18 @@ body {
 .offers {
     padding-top: 98px;
     padding-bottom: 98px;
-    
+
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 21px;
 
+    & > div:nth-child(4) {
+        grid-row: 2 / 4;
+    }
+
+    & > div:nth-child(1) {
+        grid-row: 1 / 3;
+    }
     &__item {
         position: relative;
         display: flex;
@@ -235,18 +239,10 @@ body {
         color: $colorMainText;
     }
 
-    &__title {
+    &__text_title {
         font-size: 30px;
         color: $colorPink;
     }
-}
-
-.offers > div:nth-child(4) {
-    grid-row: 2 / 4;
-}
-
-.offers > div:nth-child(1) {
-    grid-row: 1 / 3;
 }
 
 /* Блок продукты */
