начала работы с блоком продукты, сделал заголовок

--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@ body {
   padding-top: 48px;
   display: flex;
   flex-direction: column;
-  gap: 49px;
+  gap: 60px;
 }
 
 .products-item {
@@ -220,18 +220,18 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 6px;
+  gap: 16px;
 }
 
 .products-title__head {
   color: #222222;
-  font-family: "Lato";
   font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 0.025em;
 }
 
 .products-title__text {
   color: #9f9f9f;
-  font-family: "Lato";
   font-size: 14px;
 }
 
