заголовок блока продукты готов

--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,23 @@ body {
   color: #f16d7f;
 }
 
+.products .products-title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+.products .products-title__head {
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 0.025em;
+  color: #222222;
+}
+.products .products-title__text {
+  letter-spacing: 0.025em;
+  color: #9f9f9f;
+}
+
 /* следующий блок черный отступ top должен быть 36 */
 /* блок options */
 .options {
