--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,10 @@ body {
   gap: 32px;
 }
 
+.products-item img {
+  width: 100%;
+}
+
 /* следующий блок черный отступ top должен быть 36 */
 /* блок options */
 .options {
