--- a/css/style.css
+++ b/css/style.css
@@ -256,43 +256,28 @@ body {
   color: #ffffff;
 }
 
-/* следующий блок черный отступ top должен быть 36 */
 /* блок options */
 .options {
-  margin-top: 36px;
-  background-color: #222224;
-  min-height: 341px;
-  padding-left: calc(50% - 800px);
-  padding-right: calc(50% - 800px);
+  height: 529px;
+  gap: 36px;
   display: flex;
   justify-content: center;
-  gap: 30px;
 }
 
-.option-item {
+.option {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
+}
+.option__item {
+  display: flex;
+  gap: 33px;
+}
+.option__header {
+  display: flex;
   gap: 17px;
-  padding-top: 104px;
-  padding-bottom: 104px;
-  max-width: 360px;
-}
-
-.option-item__head {
-  color: #fbfbfb;
-  font-family: "Lato";
-  font-size: 19.96px;
-}
-
-.option-item__paragraf {
-  color: #fbfbfb;
-  text-align: center;
-  font-family: "Lato";
-  font-size: 13.972px;
-  font-weight: 300;
-  max-width: 82%;
+  flex-direction: column;
+  width: 220px;
 }
 
 /* блок subscrybe */
