--- a/css/style.css
+++ b/css/style.css
@@ -256,11 +256,37 @@ body {
   color: #ffffff;
 }
 
+.options {
+  padding-bottom: 98px;
+}
 .options__conteiner {
   height: 529px;
   gap: 36px;
   background-color: #222224;
   display: flex;
+}
+
+.option-img {
+  position: relative;
+}
+.option-img__text {
+  font-size: 54px;
+  line-height: 1.2;
+  font-weight: 700;
+  letter-spacing: 0.025em;
+  color: #ffffff;
+}
+.option-img_pink {
+  color: #f16d7f;
+}
+.option-img_small {
+  font-size: 32px;
+}
+
+.option-text {
+  position: absolute;
+  top: 146px;
+  left: 39px;
 }
 
 .option {
