--- a/css/style.scss
+++ b/css/style.scss
@@ -13,9 +13,9 @@ $colorOption: #fbfbfb;
 $contantWidth: 1140px;
 
 $bgColorMain: #e8e8e8;
+$bgColorSecond: #222224;
 $borderColorSearch: #e6e6e6;
 $colorTextSearch: #a4a4a4;
-$bgOptions: #222224;
 
 * {
     padding: 0;
@@ -326,7 +326,7 @@ body {
     &__conteiner {
         height: 529px;
         gap: 36px;
-        background-color: $bgOptions;
+        background-color: $bgColorSecond;
 
         display: flex;
     }
@@ -417,32 +417,28 @@ body {
 }
 
 .subscrybe-comment__paragraf {
-    color: #222224;
+    color: $bgColorSecond;
     text-align: center;
-    font-family: "Lato";
     font-size: 20px;
     max-width: 360px;
 }
 
 .subscrybe-comment__span {
-    color: #222224;
-    font-family: "Lato";
+    color: $bgColorSecond;
     font-size: 20px;
     font-style: italic;
 }
 
 .subscrybe-form__text {
-    color: #222224;
+    color: $bgColorSecond;
     text-align: center;
-    font-family: "Lato";
     font-size: 24px;
     font-weight: 700;
     line-height: 1.6;
 }
 
 .subscrybe-form__paragraf {
-    color: #222224;
-    font-family: "Lato";
+    color: $bgColorSecond;
     font-size: 18px;
     line-height: 1.6;
 }
@@ -455,9 +451,7 @@ body {
 
 .forms input {
     padding: 16px 22px 16px 20px;
-    color: #222224;
-    font-family: "Lato";
-    font-size: 14px;
+    color: $bgColorSecond;
 
     outline: none;
     border: none;
@@ -467,10 +461,8 @@ body {
 }
 
 .forms button {
-    color: #fff;
+    color: $colortWite;
     text-align: center;
-    font-family: "Lato";
-    font-size: 14px;
 
     padding: 16px 22px;
     background-color: $colorPink;
@@ -487,7 +479,7 @@ body {
 /* блок footer */
 .footer {
     min-height: 79px;
-    background-color: #222224;
+    background-color: $bgColorSecond;
 
     display: flex;
     justify-content: space-between;
@@ -495,8 +487,7 @@ body {
 }
 
 .footer-copy {
-    color: #fbfbfb;
-    font-family: "Lato";
+    color: $colorOption;
     font-size: 16px;
 }
 
@@ -508,7 +499,7 @@ body {
 .social-item {
     width: 32px;
     height: 32px;
-    background-color: #fff;
+    background-color: $colortWite;
 
     display: flex;
     align-items: center;
@@ -521,7 +512,7 @@ body {
 }
 
 .social-item:hover svg path {
-    fill: #fff;
+    fill: $colortWite;
 }
 
 .none {
