--- a/css/style.css
+++ b/css/style.css
@@ -391,14 +391,14 @@ body {
 /* блок footer */
 .footer {
   min-height: 79px;
-  background-color: #222224;
+  background-color: #e6e6e6;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .footer-copy {
-  color: #fbfbfb;
+  color: #7a7a7a;
   font-size: 16px;
 }
 
@@ -414,6 +414,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.social-item svg path {
+  fill: #b2b2b2;
 }
 
 /* режим наведения на кнопки соцсетей */
