--- a/css/style.scss
+++ b/css/style.scss
@@ -231,6 +231,7 @@ body {
     grid-template-columns: 1fr 1fr;
     gap: 21px;
 
+
     &>div:nth-child(4) {
         grid-row: 2 / 4;
     }
@@ -259,6 +260,11 @@ body {
         font-weight: 900;
         letter-spacing: 0.025em;
         color: $colorMainText;
+        transition: transform 0.5s ease-in;
+    }
+
+    &__text:hover {
+        transform: scale(1.1);
     }
 
     &__text_title {
