--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@ body {
   padding-left: 8px;
 }
 
+.button-hover_pink {
+  transition: background-color 0.5s ease-in-out;
+}
+
 .button-hover_pink:hover {
   color: #f16d7f;
   background-color: #ffffff;
@@ -273,9 +277,9 @@ body {
   justify-content: center;
 }
 .products-button__all {
+  border: 1px solid #f16d7f;
   background-color: #f16d7f;
   padding: 20px 24px;
-  border: none;
   font-size: 16px;
   font-weight: 700;
   letter-spacing: 0.025em;
