--- a/css/style.scss
+++ b/css/style.scss
@@ -39,6 +39,10 @@ body {
 }
 
 // наведение на кнопку
+.button-hover_pink {
+    transition: background-color 0.5s ease-in-out;
+}
+
 .button-hover_pink:hover {
     color: $colorPink;
     background-color: $colortWite;
@@ -341,9 +345,9 @@ body {
     justify-content: center;
 
     &__all {
+        border: 1px solid $colorPink;
         background-color: $colorPink;
         padding: 20px 24px;
-        border: none;
 
         font-size: 16px;
         font-weight: 700;
