--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,7 @@ body {
   display: flex;
   flex-direction: column;
   padding-top: 224px;
+  height: 100%;
 }
 .hero-text__head {
   font-size: 60px;
@@ -172,6 +173,7 @@ body {
   font-weight: 900;
   letter-spacing: 0.025em;
   color: #222222;
+  margin: 0;
 }
 .hero-text_midle {
   font-size: 40px;
