--- a/css/style.scss
+++ b/css/style.scss
@@ -311,7 +311,8 @@ body {
 .products-items {
     display: grid;
     grid-template-columns: repeat(4, 261px);
-    gap: 32px;
+    column-gap: 32px;
+    row-gap: 39px;
 }
 
 // стили карточки
@@ -509,6 +510,9 @@ body {
 .forms:hover button {
     transform: scale(1.1);
 }
+
+// Блок о компании
+
 
 /* блок footer */
 .footer {
