--- a/css/style.css
+++ b/css/style.css
@@ -249,7 +249,9 @@ body {
 .products-items {
   display: grid;
   grid-template-columns: repeat(4, 261px);
-  gap: 32px;
+  -moz-column-gap: 32px;
+       column-gap: 32px;
+  row-gap: 39px;
 }
 
 .products-item {
@@ -418,6 +420,20 @@ body {
 
 .forms:hover button {
   transform: scale(1.1);
+}
+
+.brand-container {
+  padding-top: 109px;
+  padding-bottom: 89px;
+  display: flex;
+}
+.brand-container__about {
+  display: flex;
+  flex-direction: column;
+  gap: 29px;
+}
+.brand-container__texts {
+  width: 430px;
 }
 
 /* блок footer */
